fix z-index

--- a/src/presenters/Home/Timeline/timeline.css
+++ b/src/presenters/Home/Timeline/timeline.css
@@ -17,6 +17,7 @@
   background-color: rgba(10, 10, 10, 0.5);
   left: 0;
   top: 0;
+  z-index: 25;
 }
 
 .modal_container {
